--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -18,8 +18,10 @@
                 <outlet property="editBtn" destination="5mx-e6-UMe" id="S2Y-eC-MhO"/>
                 <outlet property="engineModelTF" destination="6n9-7B-C16" id="tl3-V5-6dR"/>
                 <outlet property="engineNoTF" destination="pLB-Qb-syT" id="wgE-4Q-Owf"/>
+                <outlet property="fuelAmountL" destination="T3o-eM-57K" id="kmj-Go-d0l"/>
                 <outlet property="fuelAmountTF" destination="wfu-Uv-do7" id="XA4-UI-TyE"/>
                 <outlet property="genderTF" destination="8io-XW-Jle" id="6r4-hh-2iT"/>
+                <outlet property="mileageL" destination="BkO-R9-qwN" id="Sb0-YM-dxe"/>
                 <outlet property="mileageTF" destination="brK-Bq-52q" id="QgW-ys-oDb"/>
                 <outlet property="modelTF" destination="X9Z-8r-go2" id="U4m-xv-jPX"/>
                 <outlet property="myScrollV" destination="Anl-hI-GET" id="Pu9-co-EDh"/>
@@ -81,8 +83,8 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总里程表" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkO-R9-qwN">
-                                            <rect key="frame" x="16" y="12" width="61.5" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首次总里程表" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkO-R9-qwN">
+                                            <rect key="frame" x="16" y="12" width="92" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="jTK-m9-bvN"/>
                                             </constraints>
@@ -91,7 +93,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="总里程表" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="brK-Bq-52q">
-                                            <rect key="frame" x="85" y="7" width="230" height="30"/>
+                                            <rect key="frame" x="115.5" y="7" width="199.5" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="jAv-GI-B62"/>
                                             </constraints>
@@ -123,8 +125,8 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="燃油量" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3o-eM-57K">
-                                            <rect key="frame" x="16" y="56" width="46" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首次燃油量" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3o-eM-57K">
+                                            <rect key="frame" x="16" y="56" width="76.5" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="blL-Cl-Qh7"/>
                                             </constraints>
@@ -133,7 +135,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="燃油量" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wfu-Uv-do7">
-                                            <rect key="frame" x="69.5" y="51" width="225.5" height="30"/>
+                                            <rect key="frame" x="100" y="51" width="195" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="sEj-mg-uSh"/>
                                             </constraints>
